<chora>: modified gitignore file
modified git ignore to ignore terraform files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
+# DS_Store macOS files
 .DS_Store
 */.DS_Store
+
+#Ignore all hiddden but !.gitignore
 .*
-!.gitignore
+!.gitignor
+
+
+# Local .terraform directories
+**/.terraform/*
+*/.terraform
+.terraform
+
+#tfvars files
+*/variables.tsvars
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+
